src/test/ui/feature-gates/issue-43106-gating-of-unstable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:7:1
   |
LL | #![unstable()]
   | ^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:10:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:13:17
   |
LL |     mod inner { #![unstable()] }
   |                 ^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:16:5
   |
LL |     #[unstable()] fn f() { }
   |     ^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:19:5
   |
LL |     #[unstable()] struct S;
   |     ^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:19:5
   |
LL |     #[unstable()] struct S;
   |     ^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:23:5
   |
LL |     #[unstable()] type T = S;
   |     ^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:26:5
   |
LL |     #[unstable()] impl S { }
   |     ^^^^^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0734`.
